[package]
name = "tml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
clap = { version = "4.1.11", features = ["derive"] }
num-bigint = "0.4.3"
termion = "2.0.1"
unicode-segmentation = "1.10.1"

[build-dependencies]
cc = "1.0"
